--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-icons": "^4.10.1",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1"
   }
 }
